# replyreview

./: .gitignore  CLAUDE.md  README.md  build.bat  build.sh  main.py  pyproject.toml  pyrightconfig.json  pyrightconfig.yaml  pytest.ini  replyreview.spec  ruff.toml
.claude/: toolkit.yaml
.claude/skills/pyside-patterns/: SKILL.md
.gemini/: .gitignore  settings.json  toolkit.yaml
assets/: icon.icns
docs/: README.md  build-strategy.md  features.md  roadmap.md  tech-spec.md  windows-build.md
replyreview/: __main__.py  models.py
replyreview/ai/: README.md  __init__.py  client.py  fake_client.py  openai_client.py  worker.py
replyreview/config/: README.md  config_manager.py
replyreview/gui/: README.md  file_load_view.py  main_window.py  review_card_widget.py  review_list_view.py  settings_dialog.py
replyreview/parser/: README.md  review_parser.py
tests/: fakes.py
tests/ai/: __init__.py  test_fake_client.py  test_openai_client.py
tests/assets/: test.csv
tests/config/: test_config_manager.py
tests/gui/: test_file_load_view.py  test_main_window.py  test_review_card_widget.py  test_settings_dialog.py
tests/parser/: test_review_parser.py
tracks/: spec-plan.md
tracks/track-1-1/: plan.md  spec.md  task-1-1.md  task-2-1.md  task-2-2.md
tracks/track-1-2/: plan.md  spec.md  task-1-1.md  task-2-1.md  task-2-2.md  task-3-1.md
tracks/track-1-3/: plan.md  spec.md  task-1-1.md  task-2-1.md  task-2-2.md
tracks/track-2-1/: plan.md  spec.md  task-1-1.md  task-2-1.md
tracks/track-2-2/: plan.md  spec.md  task-1-1.md  task-2-1.md
(+11 files in other folders)
