[project]
name = "replyreview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "langchain>=0.3.28",
  "langchain-openai>=0.3.35",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "pyside6>=6.10.3",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.19.0",
  "pyright>=1.1.408",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.1.0",
  "pytest-qt>=4.4.0",
  "ruff>=0.15.10",
]
